<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:keep="true">Wa Revamp</string>
    <string name="app_desc">An Xposed module to customize your WhatsApp.</string>
    <string name="whatsapp_version">WhatsApp Version:</string>
    <string name="module_version">Module Version:</string>
    <string name="module_status">Module Status:</string>
    <string name="module_disable">Disable</string>
    <string name="module_enable">Enable</string>
    <string name="module_author">Author: I\'ts Madruga</string>
    <string name="module_telegram">Telegram Channgel: @warevampmodule</string>
    <string name="module_update_avaliable">Update Available</string>
    <string name="module_update_summary">Click for more information.</string>
    <string name="module_update">Update</string>
    <string name="message_deleted">Message Deleted</string>
    <string name="privacy_features">Privacy Features</string>
    <string name="perso">Customization</string>
    <string name="perso_sum">Home Screen • Chat Screen</string>
    <string name="general">General</string>
    <string name="general_sum">WhatsApp Theme • Clean Database</string>
    <string name="privacy">Privacy</string>
    <string name="custom_privacy">Custom Privacy</string>
    <string name="privacy_sum">Anti-Delete Options • View Once • Hide Receipt</string>
    <string name="home">Home Screen</string>
    <string name="home_sum">Separate Groups • Toolbar Settings</string>"
    <string name="conv">Conversation</string>
    <string name="conv_sum">Customize your chat screen.</string>"
    <string name="media_settings">Media Settings</string>
    <string name="media_settings_sum">Videos in HD • Imagens in HD</string>"
    <string name="antirevoke_category">Anti-Delete Options</string>
    <string name="antirevoke">Anti-Delete Messages</string>
    <string name="antirevoke_sum">Messages will not be deleted for you.</string>
    <string name="antirevoke_status">Anti-Delete Status</string>
    <string name="antirevoke_status_sum">Statuses will not be deleted for you.</string>
    <string name="videoquality">Send videos in HD quality</string>
    <string name="videoquality_sum">Send videos in HD quality.</string>
    <string name="imagequality">Send images in HD quality</string>
    <string name="imagequality_sum">Send images in HD quality.</string>
    <string name="reboot_wpp">Reboot WhatsApp</string>
    <string name="novotema">New WhatsApp theme</string>
    <string name="novotema_sum">When activated, it changes the color and icon theme to the new WhatsApp theme.</string>
    <string name="viewonce">Disable View Once</string>
    <string name="viewonce_sum">When active, it allows you to open view-once messages as many times as you want.</string>
    <string name="dnd_mode_title">DND Mode</string>
    <string name="dnd_mode_description">When Do Not Disturb mode is on, you will be unable to send or receive messages.</string>
    <string name="hidereceipt">Hide Receipt</string>
    <string name="hidereceipt_sum">Don\'t tell the users you\'ve received the messages.</string>
    <string name="separate_groups">Separate groups</string>
    <string name="separate_groups_sum">Separate your chats by: groups, private chats, status, calls, communities.</string>
    <string name="new_menu_ui">New Context Menu UI</string>
    <string name="new_menu_ui_sum">The new iOS-style message context menu will be enabled.</string>
    <string name="clean_msgstore">Clean MsgStore Database</string>
    <string name="clean_msgstore_sum">Delete your messages, statuses and calls.</string>
    <string name="clean_axolotl">Clean Axolotl Database</string>
    <string name="clean_axolotl_sum">Request code and leave messages on hold.</string>
    <string name="clean_wa">Clean Wa Database</string>
    <string name="clean_wa_sum">Removes slowdowns when sending messages and synchronizes contacts.</string>
    <string name="clean_sticker">Clean Sticker Database</string>
    <string name="clean_sticker_sum">Deletes all saved stickers.</string>
    <string name="clean_database">Clean Database</string>
    <string name="clean_database_sum">Clean messages • Clean Stickers • Sync Contacts</string>
    <string name="clean_database_msg">Do you want to continue?\n\nThis action is irreversible.</string>
    <string name="clean_database_ok">Database deleted successfully.</string>
    <string name="about">About App</string>
    <string name="disable_pinned_limit">Disable Pinned Chats Limit</string>
    <string name="disable_pinned_limit_sum">Disable limit of 3 pinned chats.</string>
    <string name="hide_archived_chat">Hide Archived Chats</string>
    <string name="hide_archived_chat_sum">Hide archived chats, to access hold on the \"WhatsApp\" title in the header on Home Screen.</string>
    <string name="hide_read">Hide Blue Ticks</string>
    <string name="hide_read_sum">View messages and statuses on the chat screen without users knowing.</string>
    <string name="quality_media">Quality Options</string>
    <string name="download_media">Download Options</string>
    <string name="download_status">Download Status</string>
    <string name="download_status_sum">Create a button to download people\'s statuses.</string>
    <string name="download_viewonce">Download View Once</string>
    <string name="download_viewonce_sum">Create a view once download button.</string>
    <string name="disable_secure_flags">Remove FLAG_SECURE from Window</string>
    <string name="disable_secure_flags_sum">This function removes the FLAG_SECURE from app windows, allowing unrestricted screenshot and screen recording capabilities.</string>
    <string name="hide_recording">Hide Recording Audio</string>
    <string name="hide_recording_sum">When active, the person cannot see that you are recording audio.</string>
    <string name="hide_typing">Hide Typing</string>
    <string name="hide_typing_sum">When active, the person cannot see that you are typing.</string>
    <string name="freeze_last_seen">Freeze last seen</string>
    <string name="freeze_last_seen_sum">When it\'is enabled, you\'ll don\'t see any presence updates from other users, like typing, recording, online.</string>
    <string name="antirevoke_show_text">Show text</string>
    <string name="antirevoke_show_icon">Show icon</string>
    <string name="tab_groups">Groups</string>
</resources>