<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/quality_media" >
    <rikka.material.preference.MaterialSwitchPreference
        android:title="@string/imagequality"
        android:summary="@string/imagequality_sum"
        android:key="imageQuality" />
    <rikka.material.preference.MaterialSwitchPreference
        android:title="@string/videoquality"
        android:summary="@string/videoquality_sum"
        android:key="videoQuality" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/download_media" >
        <rikka.material.preference.MaterialSwitchPreference
            android:title="@string/download_status"
            android:summary="@string/download_status_sum"
            android:key="download_status" />
        <rikka.material.preference.MaterialSwitchPreference
            android:title="@string/download_viewonce"
            android:summary="@string/download_viewonce_sum"
            android:key="download_viewonce" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>