<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

        <rikka.material.preference.MaterialSwitchPreference
            android:title="@string/separate_groups"
            android:summary="@string/separate_groups_sum"
            android:key="separateGroups" />
        <rikka.material.preference.MaterialSwitchPreference
            android:title="@string/disable_pinned_limit"
            android:summary="@string/disable_pinned_limit_sum"
            android:key="pinnedLimit"/>
        <rikka.material.preference.MaterialSwitchPreference
                android:title="@string/hide_archived_chat"
                android:summary="@string/hide_archived_chat_sum"
                android:key="hide_archived" />

</androidx.preference.PreferenceScreen>