<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <rikka.material.preference.MaterialSwitchPreference
        android:title="@string/novotema"
        android:summary="@string/novotema_sum"
        android:key="novoTema"/>
    <rikka.material.preference.MaterialSwitchPreference
        android:title="@string/disable_secure_flags"
        android:summary="@string/disable_secure_flags_sum"
        android:key="disable_secure_flags"/>
    <PreferenceCategory
        android:title="@string/clean_database">
    <Preference
        android:title="@string/clean_database"
        android:summary="@string/clean_database_sum"
        android:fragment="its.madruga.warevamp.ui.fragments.RootFragment$CleanDatabasePreference" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>