<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activitys.MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:name="androidx.navigation.fragment.NavHostFragment"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_graph_main"
        app:layout_constraintTop_toBottomOf="@id/infos_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/mainViewPager" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/infos_layout"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <its.madruga.warevamp.ui.views.InfoCard
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:id="@+id/infos"
            android:title="@string/app_name"
            android:subtitle="@string/app_desc"
            app:cardElevation="8dp"
            app:cardCornerRadius="12dp"
            style="@style/Widget.Material3.CardView.Elevated"/>

        <its.madruga.warevamp.ui.views.InfoCard
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/update"
            android:visibility="gone"
            app:cardElevation="8dp"
            app:cardCornerRadius="12dp"
            style="@style/Widget.Material3.CardView.Elevated"/>

        <its.madruga.warevamp.ui.views.InfoCard
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/wpp_reboot"
            android:subtitle="@string/reboot_wpp"
            android:clickable="false"
            app:cardElevation="8dp"
            app:cardCornerRadius="12dp"
            style="@style/Widget.Material3.CardView.Elevated"/>
    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:background="?attr/colorSurfaceContainer"
        app:elevation="8dp"
        app:title="@string/home"
        app:titleTextAppearance="@style/TextAppearance.Material3.TitleLarge.WaRevamp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>